adding our team in the home page

--- a/src/components/Assets/Css/Style.css
+++ b/src/components/Assets/Css/Style.css
@@ -22,4 +22,15 @@ ul{
 /* Home page CSS */
 
 
-/* Fotoer CSS */
+/* Team Page */
+
+.singleImage img{
+    filter: grayscale(100%);
+    transition: 0.5s;
+   
+}
+.singleImage img:hover{
+    filter: grayscale(0%);
+}
+
+/* Footer CSS */
